add retry to pkgrepo.managed

--- a/salt/makina-states/_macros/h.jinja
+++ b/salt/makina-states/_macros/h.jinja
@@ -67,6 +67,7 @@
     - stateful: true
 {% endif %}
   pkgrepo.managed:
+    - retry: {attempts: 6, interval: 10}
     - name: "{{name}}"
     - file: "{{file}}"
     {% if dist %}- dist: "{{dist}}"{% endif %}
