--- a/salt/makina-states/_macros/h.jinja
+++ b/salt/makina-states/_macros/h.jinja
@@ -309,12 +309,20 @@ fail-makina-{{pref}}-{{unit}}-restart-service:
   cmd.run:
     - name: |
         sret=0;ret=0;vret=0
+        systemd_exists=""
         {% if action %}
+          if hash -r systemctl >/dev/null 2>&1;then
+            systemd_exists="1"
+            if systemctl is-enabled -q --no-pager {{service}} 2>&1 \
+            | egrep -q "Failed to get unit file|not-found|unrecognized service|Unit .*service not loaded"; then
+              systemd_exists=""
+            fi
+          fi
           if hash -r service >/dev/null 2>&1;then
-            if ! ( service {{service}} status 2>&1 | egrep -q "unrecognized service" ); then
+            if ! ( service {{service}} status 2>&1 | egrep -q "not-found|unrecognized service|Unit .*service not loaded" ); then
               service {{service}} {{action}}
             fi
-          elif hash -r systemctl >/dev/null 2>&1;then
+          elif [ "x${systemd_exists}" != "x" ];then
             systemctl {{action}} {{service}}
           fi
           ret=$?
@@ -328,7 +336,7 @@ fail-makina-{{pref}}-{{unit}}-restart-service:
             {% if systemd_action == 'enable' %}
             {%  set invert_test = '!' %}
             {% endif %}
-            if {{invert_test }} \
+            if [ "x${systemd_exists}" != "x"  ] && {{invert_test }} \
               ( systemctl is-enabled -q --no-pager {{service}} >/dev/null 2>&1 );then
               systemctl {{systemd_action}} {{service}}
               sret=$?
