--- a/salt/makina-states/_macros/h.jinja
+++ b/salt/makina-states/_macros/h.jinja
@@ -373,14 +373,15 @@ fail-makina-{{pref}}-{{unit}}-restart-service:
 {% if after_macro is not none %}{{ after_macro() }}{% endif %}
 {% endmacro%}
 
-{% macro cops_default_install(role) %}
+{% macro cops_default_install(role, configure) %}
             if [ -e {{cops}}/roles/corpusops.roles/{{role}} ];then
               cd {{cops}}/roles/corpusops.roles/{{role}}
             fi
             if [ -e {{cops}}/roles/{{role}} ];then
               cd {{cops}}/roles/{{role}}
             fi
-            {{cops}}/bin/cops_apply_role role.yml -e @local/makinastates.yml
+            {{cops}}/bin/cops_apply_role role.yml \
+               {% if configure is not none %}-e @local/makinastates.yml {% endif %}
 {% endmacro%}
 
 {% macro install_via_cops(role, configure=none, install=none) %}
@@ -392,33 +393,45 @@ fail-makina-{{pref}}-{{unit}}-restart-service:
   cmd.run:
     - name: {{cops}}/bin/install.sh -C -s
     - require:
-      - mc_proxy: {{role}}-dummy-pre 
+      - mc_proxy: {{role}}-dummy-pre
     - onlyif: test ! -e {{cops}}/roles/corpusops.roles/{{role}} && test ! -e {{cops}}/roles/{{role}}
-{% if configure is not none %}
-{{role}}-config-via-corpusops:
+{{role}}-config1-via-corpusops:
   file.managed:
-    - name: {{cops}}/roles/corpusops.roles/localsettings_nodejs/local/makinastates.yml
+    - name: {{cops}}/roles/{{role}}/local/makinastates.yml
+    - onlyif: test -e {{cops}}/roles/{{role}}
     - makedirs: true
     - mode: 640
-{{ configure() }}
-{% endif %}
+    - require:
+      - mc_proxy: {{role}}-dummy-pre
+{% if configure is not none %}{{ configure() }}{% endif %}
+{{role}}-config2-via-corpusops:
+  file.managed:
+    - name: {{cops}}/roles/corpusops.roles/{{role}}/local/makinastates.yml
+    - onlyif: test -e {{cops}}/roles/corpusops.roles/{{role}}
+    - makedirs: true
+    - mode: 640
+    - require:
+      - mc_proxy: {{role}}-dummy-pre
+{% if configure is not none %}{{ configure() }}{% endif %}
 {{role}}-install-via-corpusops:
   cmd.run:
     - name: |
-{{ install(role) }}
+{{ install(role, configure) }}
     - require:
-      - mc_proxy: {{role}}-dummy-pre  
+      - mc_proxy: {{role}}-dummy-pre
     - require_in:
       - mc_proxy: {{role}}-dummy-post
     - watch:
       - mc_proxy: corpusops-checkouts-post
       - cmd: {{role}}-upgrade
 {% if configure is not none %}
-      - file: {{role}}-config-via-corpusops
+      - file: {{role}}-config1-via-corpusops
+      - file: {{role}}-config2-via-corpusops
 {% endif %}
 {{role}}-install-node-via-corpusops-retry:
   cmd.run:
-    - name: ../bin/install.sh -C -s && ../../../bin/cops_apply_role role.yml -e @local/makinastates.yml
+    - name: |
+{{ install(role, configure) }}
     - onfail_stop: false
     - onfail:
       - cmd: {{role}}-install-via-corpusops
