allow default makinastates version but also nvmrc

--- a/salt/makina-states/_macros/h.jinja
+++ b/salt/makina-states/_macros/h.jinja
@@ -442,5 +442,5 @@ fail-makina-{{pref}}-{{unit}}-restart-service:
 {{role}}-dummy-post:
   mc_proxy.hook: []
 {% endmacro %}
-{% macro nvm_use(nvmdir='/srv/apps/nvm-latest', node_version=none) %}{% if node_version is none %}{% set node_version=ns%}{% endif %}node_version="{{node_version}}" && ( nvm deactivate || true ) && if [[ -z "{{node_version}}" ]] && [[ -e .nvmrc ]];then node_version=$(cat .nvmrc) ;fi && . {{nvmdir}}/nvm.sh && if ! ( nvm use $node_version );then nvm install $node_version;fi && nvm use $node_version{% endmacro %}
+{% macro nvm_use(nvmdir='/srv/apps/nvm-latest', node_version=none) %}export NVMDIR="{{nvmdir}}" && export NVM_DIR="{{nvmdir}}" && {% if node_version is none %}{% set node_version=ns%}{% endif %}node_version="{{node_version}}" && if ( nvm --help 2>/dev/null );then nvm deactivate;fi && if [[ -z "{{node_version}}" ]] && [[ -e .nvmrc ]];then node_version=$(cat .nvmrc) ;fi && . "$NVMDIR/nvm.sh" && if ! ( nvm use $node_version );then nvm install $node_version;fi && nvm use $node_version{% endmacro %}
 {# vim: set nofoldenable #}
